# rl-agents-benchmark-lander

./: .gitignore  Makefile  README.md  agent.py  evaluate.py  logger.py  main.py  networks.py  pyproject.toml  reinforce.ipynb  reinforce.py  reinforce_policy.pth  reinforce_rewards.npy  requirements.txt  train.py
checkpoints/a2c/: actor_best.pth  actor_final.pth  critic_best.pth  critic_final.pth
dqn/notebook/: dqn-on-lunar-lander-rl.ipynb
dqn/src/DQN/: __init__.py  agent.py  config.py  eval.py  main.py  networks.py  replay_buffer.py  train.py  utils.py
dqn/tests/: test_eval.py  test_model.py  test_quick_smoke.py  test_replay_buffer.py  test_utils.py
evaluation/: README.md  __main__.py
evaluation/src/evaluation/: __init__.py  __main__.py  adapters.py  aggregate.py  play.py  plot.py  report.py
evaluation/tests/: conftest.py  test_adapters.py  test_aggregate.py  test_plot_and_report.py
logs/a2c/: training_log.csv
results/logs/: reinforce_seed42.csv
results/models/: reinforce_policy.pth
results/rewards/: reinforce_rewards.npy
src/: env_utils.py
tests/: test_env.py
