[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-agents-benchmark-lander"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["dqn/src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["dqn/src", "dqn/tests", "src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["dqn/tests", "tests"]
pythonpath = ["dqn/src", "."]
addopts = "-q"
filterwarnings = [
    "ignore:builtin type SwigPyPacked:DeprecationWarning",
    "ignore:builtin type SwigPyObject:DeprecationWarning",
    "ignore:builtin type swigvarlink:DeprecationWarning",
]